--- a/.github/workflows/CI_codacy.yml
+++ b/.github/workflows/CI_codacy.yml
@@ -1,10 +1,14 @@
-name: Codacy CI
+name: Codacy
 
 on:
   push:
-    branches: [main]
+    branches: [main, trunk]
   pull_request:
-    branches: [main]
+    branches: [main, trunk]
+
+permissions:
+  contents: read
+  security-events: read
 
 jobs:
   test-and-coverage:
@@ -31,17 +35,14 @@ jobs:
 
     steps:
       - name: Checkout
-      # Código del repo
         uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
-      # Entorno Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Cache pip
-      # Acelera instalaciones
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
@@ -49,40 +50,40 @@ jobs:
           restore-keys: ${{ runner.os }}-pip-
 
       - name: Install dependencies
-      # Dependencias del proyecto
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          # Asegura pytest-cov si no está en requirements:
+          python - <<'PY'
+          import pkgutil, sys
+          sys.exit(0 if pkgutil.find_loader('pytest_cov') else 1)
+          PY
+          if [ $? -ne 0 ]; then pip install pytest-cov; fi
 
       - name: Install MariaDB client (for wait check)
-      # Cliente para hacer ping a la BD
         run: |
           sudo apt-get update
           sudo apt-get install -y mariadb-client
 
       - name: Wait for DB ready
-      # Espera activa hasta que MariaDB responda
         env:
           MARIADB_ROOT_PASSWORD: uvlhub_root_password
         run: |
-          for i in {1..30}; do
+          for i in {1..60}; do
             mariadb-admin ping -h 127.0.0.1 -P 3306 -uroot -p"$MARIADB_ROOT_PASSWORD" --silent && break
-            echo "Waiting for MariaDB ($i/30)..."
+            echo "Waiting for MariaDB ($i/60)..."
             sleep 2
           done
 
       - name: Check for outdated dependencies
-      # Higiene (no bloqueante)
         run: pip list --outdated || true
 
       - name: Security audit (non-blocking)
-      # Auditoría de CVEs (tolerante)
         run: |
           pip install pip-audit
           pip-audit || true
 
       - name: Run tests with coverage
-      # Ejecuta pytest y genera coverage.xml
         env:
           FLASK_ENV: testing
           DB_HOST: 127.0.0.1
@@ -94,7 +95,6 @@ jobs:
           pytest -q --ignore-glob='*selenium*' --cov=app --cov-report=xml
 
       - name: Upload coverage to Codacy (only once, safe for forks)
-      # Sube cobertura solo en 3.12 y cuando no sea un PR de fork (no hay secretos)
         if: >
           matrix.python-version == '3.12' &&
           (github.event_name == 'push' ||
