--- a/.github/workflows/CI_codacy.yml
+++ b/.github/workflows/CI_codacy.yml
@@ -14,7 +14,8 @@ jobs:
         image: mysql:8.0
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: cervezahub_test
+          # 👇 La BD que realmente usan los tests: 'default_db'
+          MYSQL_DATABASE: default_db
           MYSQL_USER: default_user
           MYSQL_PASSWORD: default_password
         ports:
@@ -28,10 +29,11 @@ jobs:
     env:
       DB_USER: default_user
       DB_PASSWORD: default_password
-      DB_NAME: cervezahub_test
+      DB_NAME: default_db
       DB_HOST: 127.0.0.1
       DB_PORT: 3306
-      DATABASE_URL: mysql+pymysql://default_user:default_password@127.0.0.1:3306/cervezahub_test
+      # 👇 Por si tu config usa DATABASE_URL
+      DATABASE_URL: mysql+pymysql://default_user:default_password@127.0.0.1:3306/default_db
 
     steps:
       - name: Checkout
