--- a/.github/workflows/CI_codacy.yml
+++ b/.github/workflows/CI_codacy.yml
@@ -2,7 +2,7 @@ name: test-and-coverage
 
 on:
   push:
-    branches: [ main, develop, feature_task_workflows ]
+    branches: [ main, trunk ]
   pull_request:
 
 jobs:
