feat: recuperacion de contraseña

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -9,3 +9,7 @@ MARIADB_USER=uvlhubdb_user
 MARIADB_PASSWORD=uvlhubdb_password
 MARIADB_ROOT_PASSWORD=uvlhubdb_root_password
 WORKING_DIR=/app/
+MAIL_PORT=1025
+MAIL_SERVER=mailpit
+MAIL_USE_TLS=False
+SECRET_KEY=TU_CLAVE_SECRETA_LARGA
