--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -8,6 +8,7 @@ services:
     depends_on:
       - db
       - selenium-hub
+      - mailpit 
     build:
       context: ../
       dockerfile: docker/images/Dockerfile.dev
@@ -33,6 +34,17 @@ services:
     networks:
       - uvlhub_network
 
+
+  mailpit:
+    image: axllent/mailpit
+    container_name: mailpit_catcher_container
+    restart: always
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+    networks:
+      - uvlhub_network
+  
   nginx:
     container_name: nginx_web_server_container
     image: nginx:1.29.1
