feat: conectado a servidor de gmail

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -9,7 +9,11 @@ MARIADB_USER=uvlhubdb_user
 MARIADB_PASSWORD=uvlhubdb_password
 MARIADB_ROOT_PASSWORD=uvlhubdb_root_password
 WORKING_DIR=/app/
-MAIL_PORT=1025
-MAIL_SERVER=mailpit
-MAIL_USE_TLS=False
-SECRET_KEY=TU_CLAVE_SECRETA_LARGA
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USE_SSL=False 
+MAIL_USERNAME=cervezahub@gmail.com
+MAIL_PASSWORD=fhintdbzxhipnxua
+MAIL_DEFAULT_SENDER=cervezahub@gmail.com
+SECRET_KEY=CONTRASEÑA_LARGA
