--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "UVLHub Dev",
+  "name": "CERVEZAHUB Dev",
   "dockerComposeFile": "../docker/docker-compose.dev.yml",
   "service": "web",
   "workspaceFolder": "/app",
