--- a/.github/workflows/CI_realease_on_tag.yml
+++ b/.github/workflows/CI_realease_on_tag.yml
@@ -3,23 +3,18 @@ name: Create Release on Tag
 on:
   push:
     tags:
-      - '*.*.*'    
+      - '*.*.*'
+
+permissions:
+  contents: write
 
 jobs:
   create_release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+      - uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}          
-          name: Release ${{ github.ref_name }}      
-          draft: false
-          prerelease: false
           generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
