--- a/vagrant/05_run_app.yml
+++ b/vagrant/05_run_app.yml
@@ -26,8 +26,8 @@
 
     - name: Set database with Rosemary
       shell: |
-        source {{ working_dir }}vagrant_venv/bin/activate
-        cd {{ working_dir }}
+        source /home/vagrant/vagrant_venv/bin/activate
+        cd /vagrant
         flask db upgrade
         rosemary db:seed -y --reset
       args:
@@ -36,7 +36,7 @@
 
     - name: Run Flask application
       shell: |
-        source {{ working_dir }}vagrant_venv/bin/activate
+        source {{ working_dir }}/vagrant_venv/bin/activate
         cd {{ working_dir }}
         nohup flask run --host=0.0.0.0 --port=5000 --reload --debug > app.log 2>&1 &
       args:
