--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -45,8 +45,8 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../", "/vagrant"
 
   # Use Ansible for provisioning
-  config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "00_main.yml"
+  config.vm.provision "ansible_local" do |ansible|
+    ansible.playbook = "vagrant/00_main.yml"
     ansible.extra_vars = {
       flask_app_name: ENV['FLASK_APP_NAME'],
       flask_env: ENV['FLASK_ENV'],
